2011-09-26    <zag@manzanillo>

	* bl/vl/genotype/io.py (PedWriter): Added a plink compliant ped
	writer.

	* bl/vl/kb/drivers/omero/wrapper.py (MetaWrapper.make_getter):
	changed so that it will return a None when the ome_obj field is
	None. It could be used to trigger a reload, if the field is not
	optional. For the time being, this is left as an exercise for the
	caller.

2011-09-24    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/genotyping.py
	(GenotypingAdapter.SNP_ALIGNMENT_COLS): added Pseudo-autosomal
	region of x (XY), assigned code 25, moved MT to 26.

	* bl/vl/individual/pedigree.py: Now the genotyping status of
	individuals is passed as an aux dict and not as an attribute to
	the individual object.

2011-09-23    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/data_samples.py (SNPMarkersSet): Added
	support to bring markers set markers in memory.

	* bl/vl/kb/drivers/omero/proxy.py
	(Proxy.add_snp_marker_definitions): Changed the op_vid parameter
	to be either an Action or a string. Added some sort of documentation.
	(Proxy.create_snp_markers_set): Added new syntactic sugar.
	(Proxy.create_markers): Added new syntactic sugar

2011-09-20    <zag@manzanillo>

	* bl/vl/app/importer/data_sample.py (make_parser_data_sample):
	Added support to be able to directly import DataSample that
	directly link to individuals.

2011-09-18    <zag@manzanillo>

	* .ropeproject/config.py: Added ropemacs support.

2011-09-21    <simleo@neuron.crs4.it>

	* bl/vl/app/snp_reannotator/convert_sam.py
	(SnpHitProcessor.process): fixed starting position for segment
	extractor output.

2011-09-20    <simleo@neuron.crs4.it>

	* bl/vl/app/snp_reannotator/convert_sam.py: added an output format
	for Galaxy's genome segment extractor.

2011-09-19    <simleo@neuron.crs4.it>

	* bl/vl/app/snp_reannotator/convert_sam.py (SnpHitProcessor):
	changed to use numeric values for chromosomes and 'None' instead
	of '*' for a null value.

2011-09-14    <simleo@neuron.crs4.it>
